complete switch from passing data via text file (urgh) to redis db, for the UKHASnet decoder this uses the hiredis database (need to do git submodule init and git submodule update, followed by make and make install). Also will need to do pip3 install redis for python lora script.

--- a/UKHASnet-decoder/makefile
+++ b/UKHASnet-decoder/makefile
@@ -7,7 +7,7 @@ SOURCES = UKHASnet-decoder.c
 all: $(TARGET)
 	
 $(TARGET): $(SOURCES)
-	$(CC) -std=gnu99 -o $(TARGET) $(SOURCES) -lcurl
+	$(CC) -std=gnu99 -o $(TARGET) $(SOURCES) -lcurl -lhiredis  $(pkg-config --cflags --libs glib-2.0)
 
 $(TARGET).exe: $(SOURCES)
 	i686-w64-mingw32-gcc -std=gnu99 -o $@ $^ \
